# mxdbg

./: .gitignore  CMakeLists.txt  README.md  cmake_uninstall.cmake.in
libmxdbg/: CMakeLists.txt  debugger.cpp  exception.cpp  pipe.cpp  process.cpp  scanner.cpp  string_buffer.cpp  types.cpp
libmxdbg/include/mxdbg/: debugger.hpp  exception.hpp  expr.hpp  pipe.hpp  process.hpp  scanner.hpp  string_buffer.hpp  types.hpp  version_info.hpp
mxdbg/: CMakeLists.txt  main.cpp
mxdbg/include/: argz.hpp
site/: index.html  script.js  style.css
tests/: CMakeLists.txt  array.s  copy_string.c  echo.c  exception_test.cpp  pipe_test.cpp  pipe_write.cpp  print_hex.c  print_hex_do.c  print_loop.c  process_continue.cpp  process_pid.cpp  program.c  register_test.cpp  registers_test.s  test_explain.c  test_program.s  thread_test.c  trim_com.c  trim_file.c
tests/asm/: args.s  array.s  copy_loop.s  double.s  echo.s  echo_backward.s  echo_for.s  file.s  file_test.s  float.s  get_input.s  get_string.s  hello_world.s  linked_list.s  list.s  loopbyx.s  notes.txt  print_hex.s  print_loop.s  program.s  prompt.s  reverse_string.s  setxy.s  stack_numbers.s  string_cat.s  string_copy.s  trim_com.s  trim_file.s
tests/asm/bits/: bit.c  bit.s
tests/asm/blocks/: Makefile  block.s  grid.s  sdl.s
tests/asm/c_app/: Makefile  main.c  surface.s
tests/asm/font/: Makefile  font.s  sdl.s
tests/asm/grid/: grid.s  sdl.s
tests/asm/image/: Makefile  sdl.s
tests/asm/int_stack/: Makefile  intstack.h  intstack.s  main.c
tests/asm/pixels/: Makefile  sdl.s  surface.s
tests/asm/rc/: Makefile  main.c  surface.s
tests/asm/sdl/: Makefile  grid.s  sdl.s
tests/asm/token/: main.c  token.c  token.s
